--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,9 +2,10 @@
   <HEAD>
      <TITLE> Mi primera pagina </TITLE>
   <HEAD>
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
   <BODY BGCOLOR="#E090EF">
-    <H1 style="color:#2874A6"> Mi perfil para la universidad</H1>
-    <P> Hola soy fany, no estoy segura aun de 
+    <H1> Mi perfil para la universidad</H1>
+    <P class="parrafito">Hola soy fany, no estoy segura aun de 
          lo que voy a estudiar tengo la idea de 
           ingieneria industrial o mercadotecnia en 
           la univerciadad autonoma de durango y ya
@@ -12,7 +13,7 @@
      <p> Estoy estudiando en el bachillerato de fisico
          matematico la verdad ni se porque me meti hay,
          si esta bien dificil pero bueno
-     <h3> Estoy en la formacion:</h3>
+     <h3> Estoy en la formacion</h3>
      <p>    De informatica y me agradan las clases que obtengo
           de ella me parece muy interesante
           aparte la maestra es muy linda ♥
@@ -21,10 +22,8 @@
          general pero me gusta salir en bici e ir hasta rio
          frio y regrersar
      <br>
-     <br>
-     <br>
-     <img src="../IMAGES/fondo 2.webp">
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJf84_UuclSAGri79lrtRONhWB0UcD2Cp1dA&usqp=CAU">
+     <img class="img-peque"  src="../IMAGES/fondo 2.webp">
+     <img class="img-peque" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJf84_UuclSAGri79lrtRONhWB0UcD2Cp1dA&usqp=CAU">
      
      <h5>Materias
       <ul>
