agrege apartados en mi pagina o no se algo asi

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <script type="text/javascript" src="../JAVASCRIPT/functions.js"> </script>
   <BODY BGCOLOR="#E090EF">
+    <header>
+      <nav>
+         <ul> 
+            <li>
+             <a href="index.html"> INICIO </a>
+            </li>
+            <li>
+             <a href="tema1.html"> TENDENCIA </a>
+            </li>
+         </ul>
+      </nav>
+    </header>
+  
     <H1> Mi perfil para la universidad</H1>
     <P class="parrafito">Hola soy fany, no estoy segura aun de 
          lo que voy a estudiar tengo la idea de 
@@ -66,6 +79,6 @@
           <button style="background:#85C1E9" onclick="changeColor()"> SALUDAR </button>
           
      
-
+   </BODY>
 
 </HTML>
