cree una formulario y lo de la clase pasada

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -76,9 +76,21 @@
           <td> Leer </td>
       </tr>
       </table>
-          <button style="background:#85C1E9" onclick="changeColor()"> SALUDAR </button>
-          
-     
-   </BODY>
+          <button style="background:#85C1E9" onclick="enviarMsg()">Hola Fany </button>
+
+          <button style="background:white" onclick="changeColor()"> COLOR </button>
+   <br>
+   <div class="form-style-6">
+   <form action="#">
+     <label for="name"> Nombre:</label>
+     <input type="text" id="nombre">
+   <br>
+     <label for="lastN"> Apellido: </label>
+     <input type="text" id="apellido">
+   <br>
+      <input type="submit"value="Enviar datos">
+   </form>
+   </div>
+     </BODY>
 
 </HTML>
