hice diviciones en mi tema 1

--- a/HTML/tema1.html
+++ b/HTML/tema1.html
@@ -10,5 +10,21 @@
   <BODY>
     <H1> Tema1 </H1>
     <H2> TOMMY SHELBY </H2>
-  </BODY>
+
+
+ <div class="container">
+  <div class="div-1">
+      <h2> tomy shelby</h2> 
+      <img class="img-p" src="https://i.pinimg.com/originals/d3/5d/87/d35d875fca07dd1079d3002d489f39b3.jpg" >
+  </div>
+  <div class="div-2">
+      <h2>Pelicula</h2> 
+      <img class="img-p" src="https://tse3.mm.bing.net/th?id=OIP.7vW2yZMQ-tJ3Ub6PFaAfHwHaEK&pid=Api&P=0&h=180" >
+  </div>
+  <div class="div-3">
+      <h2>Casa de tomy shelby</h2> 
+      <img class="img-p" src="https://66.media.tumblr.com/31828d119598659258c9ac16cf6a7a08/tumblr_inline_pajhno1d7s1vdpgk7_1280.jpg" >
+  </div>
+
+   </BODY>
 </HTML>
