probamos etiquetas de no se que btn-btn primary y asi

--- a/HTML/Tema4.html
+++ b/HTML/Tema4.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="container">
+
             <header class="page-header"> 
                 <ul class="nav nav-pills pull-right">
                     <li class="active">
@@ -16,10 +17,26 @@
                         <a href="#"> SOBRE MI</a>
                     </li>
                     <li>
-                        <a href="#"> SOBRE MI FAMILIA</a>
+                        <a href="tema1.html"> SOBRE MI FAMILIA</a>
                     </li>
                 </ul>
             </header>
+        </div>
+        <div class="jumbotron">
+            <h1> Fanys </h1>
+            <p CLASS="text-justify"> Hola soy Fany y soy estudiante de la preparatoria Victor Rosales ademas llevo la dormacion de informatica
+                y estoy casi por concluir mi bachillerato de fisico matematico, participe en los juegos regionales
+                de basquetbol y estoy por participar en los juegos estatales que se llevaran acabo en Jerez
+            <a class="btn btn-success btn-block" href="#"> call me </a>
+            </p>
+            <a class="btn btn-default" href="#">Default </a>
+            <a class="btn btn-primary" href="#">Primary </a>
+            <a class="btn btn-info" href="#">info</a>
+            <a class="btn btn-warning" href="#">warning</a>
+            <a class="btn btn-danger" href="#">danger </a>
+            <a class="btn btn-link" href="#">link</a>
+
+
         </div>
         <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>&gt;
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>&gt;
