solo me falto color a los botones}

--- a/prueba_logtics/index.html
+++ b/prueba_logtics/index.html
@@ -27,10 +27,11 @@
         </ul>
     </div>
     <div class="container">
+    
         <div class="box">
             <div class="container_iniciar">
-        
-                <div class="iniciar">
+                <div class=" iniciar ">
+
                     <div>
                         <h1 class="titulo_iniciar">Iniciar Sesión</h1>
                         <div class="container_icons">
@@ -42,13 +43,13 @@
                         <p class="text">O usa tu email para iniciar sesión </p>
                         <div>
                             <form class="form" action="">
-                                <label for="name"> EMAIL</label>
+                                <label for="name"> </label>
                                 <input type="text" placeholder="EMAIL">
                                 <br>
                                 <label for="lastN"></label>
                                 <input type="text" placeholder="CONTRASEÑA">
                                 <A herf="./"> OLVIDE LA CONTRASEÑA </A>
-                                <input type="submit" value="INICIAR">
+                                <input type="submit"  value="INICIAR">
                             </form>
                         </div>
                     </div>
@@ -57,9 +58,10 @@
                 <div class="hola">
                     <div class="container_hola">
                         <h1 class="titulo_hola">Hola</h1>
-                         <p>Regiistrate con tus datos personales</p>
-                        <div class="container_button">
-                            <button >Crear Cuenta </button>
+                         <p>Registrate con tus datos personales</p>
+   
+                        <div class="btncrear">
+                            <button>Crear Cuenta </button>
                         </div>
                         <div>
                             <div>
